docs/_build/doctest/output.txt
Results of doctest builder run on 2019-12-02 13:14:05
=====================================================

Document: index
---------------
**********************************************************************
File "../gps2net.py", line ?, in default
Failed example:
    myDist = distFrom(-122.115, 37.115, -122.111, 37.111)
Exception raised:
    Traceback (most recent call last):
      File "/Users/Joechi/.pyenv/versions/3.7.4/lib/python3.7/doctest.py", line 1329, in __run
        compileflags, 1), test.globs)
      File "<doctest default[3]>", line 1, in <module>
        myDist = distFrom(-122.115, 37.115, -122.111, 37.111)
    NameError: name 'distFrom' is not defined
**********************************************************************
File "../gps2net.py", line ?, in default
Failed example:
    myDist
Exception raised:
    Traceback (most recent call last):
      File "/Users/Joechi/.pyenv/versions/3.7.4/lib/python3.7/doctest.py", line 1329, in __run
        compileflags, 1), test.globs)
      File "<doctest default[4]>", line 1, in <module>
        myDist
    NameError: name 'myDist' is not defined
**********************************************************************
File "../gps2net.py", line ?, in default
Failed example:
    print(myDistance) // prints 568.8872918 ...
Exception raised:
    Traceback (most recent call last):
      File "/Users/Joechi/.pyenv/versions/3.7.4/lib/python3.7/doctest.py", line 1329, in __run
        compileflags, 1), test.globs)
      File "/Users/Joechi/.pyenv/versions/3.7.4/lib/python3.7/site-packages/sphinx/ext/doctest.py", line 476, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[0]>", line 1
        print(myDistance) // prints 568.8872918 ...
                                              ^
    SyntaxError: invalid syntax
**********************************************************************
1 items had failures:
   3 of   6 in default
6 tests in 1 items.
3 passed and 3 failed.
***Test Failed*** 3 failures.

Doctest summary
===============
    6 tests
    3 failures in tests
    0 failures in setup code
    0 failures in cleanup code
